--- a/src/auth-css/login.css
+++ b/src/auth-css/login.css
@@ -9,7 +9,9 @@ a {
   align-items: center;
 }
 
-
+.btn a{
+  color: #fff;
+}
 
 .login-form {
   flex: 1 1 60%;
@@ -88,8 +90,8 @@ form div {
 
 form button {
   width: 100%;
-  background-color: black !important;
-  border-color: black !important;
+  background-color: black ;
+  border-color: black ;
 }
 
 .login-form input {
@@ -314,7 +316,7 @@ padding: revert;
 .card-deck {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   gap: 15px;
   padding-top: 50px;
   padding-left: 2%;
@@ -339,4 +341,436 @@ padding: revert;
   object-fit: cover;
   height: 200px;
 }
+@media (max-width:450px) {
+  .card-deck .card {
+    min-width: fit-content;
+  }
+  .card-deck {
+    justify-content: center;
+  }
+}
+/*searchresult*/
+.search-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 100vh;
+}
 
+.searchresult {
+ width: 60%;
+  margin-right: 1rem;
+  height: 100%;
+}
+
+.map-container {
+  width: 40%;
+  height: 100%;
+}
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.cards-container .card {
+  display: flex;
+  flex-direction: row;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  width: 100%;
+  max-width: 700px;
+  margin-bottom: 1rem;
+  background-color: white;
+  padding-left: 0;
+  margin-left: 1.5rem;
+  margin-right: 1.1rem;
+}
+
+.card-image {
+  flex: 0 0 40%;
+  max-width: 40%;
+  position: relative;
+}
+
+.card-image img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  padding: 10px;
+}
+
+.card-content {
+  flex: 1;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-title {
+  margin: 0;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.card-text {
+  margin: 0.5rem 0;
+  font-size: 0.9rem;
+}
+
+.card .btn {
+  width: 100%;
+  margin-top: 1rem;
+}
+/*searchform.css*/
+.search-form {
+  position: relative;
+  flex-grow: 1; /* Make the form container grow to fill available space */
+}
+
+.search-input {
+  border-radius: 5px;
+  padding-right: 2.5rem;
+  width: 100%; /* Make the search input take full width of the form container */
+}
+.search-container .searchresult nav{
+  padding: 1rem 1.5rem;
+  height: 10%;
+}
+.search-input::placeholder {
+  content: "";
+  position: absolute;
+  left: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #777;
+}
+
+.clear-btn {
+  background-color: white;
+  color: black;
+  border: 1px solid #ddd;
+  margin-left: 0.5rem; /* Add space between search input and clear button */
+  width: fit-content;
+}
+
+.search-btn {
+  background-color: black;
+  color: white;
+  margin-left: 0.5rem; /* Add space between clear button and search button */
+  width: fit-content;
+}
+.scroll{
+  overflow-y: auto;
+  max-height: 67%;
+}
+
+
+/* Chrome, Edge, and Safari */
+.scroll::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scroll::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  border-radius: 4px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+}
+
+.scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+/* Firefox */
+.scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
+/*loading spinner*/
+ /* loadingSpinner.css */
+@keyframes pulse {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+.spinner {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+}
+
+.spinner:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  border-radius: 50%;
+  animation: pulse 1.5s ease-out infinite;
+}
+
+.spinner:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  border-radius: 50%;
+  animation: pulse 1.5s ease-out infinite;
+  animation-delay: 0.75s;
+}
+
+/* loadingSpinner.css */
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 50px;
+  width: 100%;
+}
+/*load button*/
+/* loadingSpinner.css */
+.load-more-btn {
+  background-color: #000;
+  color: #FFF;
+  border: none;
+  border-radius: 3px;
+  padding: 8px 16px;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.load-more-btn:hover {
+  background-color: #000;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.load-more-btn:disabled {
+  background-color: #6c757d;
+  cursor: not-allowed;
+  box-shadow: none;
+}
+.search-container .card {
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.card .row.no-gutters {
+  height: 100%;
+}
+
+.card .col-7 {
+  padding: 15px;
+  border-right: 1px solid #ddd;
+}
+
+.card .col-5 {
+  height: 100%;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card .card-image {
+  height: 100%;
+  position: relative;
+}
+
+.card .card-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.card .price-tag {
+  position: absolute;
+  right: 10px;
+  background-color: #fff;
+  padding: 0px 10px;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+.card .card-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card .card-title {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.card .card-text {
+  margin-bottom: 10px;
+}
+
+.card .reviews {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.card .card-info {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 14px;
+  margin-bottom: 10px;
+  align-items: flex-end;
+}
+
+.card .card-info > div {
+  margin-right: 20px;
+  display: flex;
+    align-items: center;
+}
+.card .card-info > div svg{
+  margin-right: 4px;
+}
+.card .btn {
+  margin-top: auto;
+  align-self: flex-end;
+}
+
+@media (max-width: 768px) {
+  .card .row.no-gutters {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .card .col-7 {
+    border-right: none;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .card .col-5 {
+    height: auto;
+  }
+
+  .card .card-image {
+    height: 200px;
+  }
+
+  .card .card-content {
+    height: auto;
+  }
+
+  .card .card-info {
+    flex-wrap: nowrap;
+  }
+
+  .card .card-info > div {
+    margin-right: 40px;
+  }
+
+  .card .btn {
+    margin-top: 10px;
+    align-self: flex-start;
+  }
+}
+.card-info-container{
+  display: flex;
+  justify-content: space-between;
+}
+.p-4 {
+  height: 15%;
+}
+@media (max-width: 540px) {
+  .search-container {
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .searchresult {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 1rem;
+    height: 40%;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    order: 3;
+  }
+
+  .map-container {
+    width: 100%;
+    height: 350px;
+    order: 2;
+    display: flex;
+    padding: 1.5rem;
+    
+  }
+
+  .mapboxgl-canvas{
+    border-radius: 10px;
+  }
+
+  .search-container nav {
+    padding: 0.5rem;
+    order: 1;
+    display: block!important;
+  }
+  .searchresult nav{
+    display: none!important;
+  }
+
+.cards-container .card{
+  flex-direction: column;
+  
+}
+.card .card-image{
+  max-width: 100%;
+}
+.card .card-info > div{
+  margin-right: 0;
+  padding-right: 15px;
+}
+  .card .col-5 {
+    padding: 1rem;
+  }
+  .card-info-container{
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  
+}
+@media (max-width:300px) {
+  .card .card-info {
+    flex-wrap: wrap;
+  }
+  .card-info-container{
+    align-items: flex-end;
+  }
+
+}
+.search-container nav{
+  display: none;
+}
+.searchresult nav{
+  display: block;
+}
