--- a/src/auth-css/login.css
+++ b/src/auth-css/login.css
@@ -141,11 +141,9 @@ form button {
   border-radius: 50px;
   height: 40px;
 }
-
-.row {
-  align-items: center;
+.container .secondrow{
+padding-top: 3%;
 }
-
 .column {
   display: flex;
   flex-direction: column;
@@ -157,7 +155,7 @@ form button {
 }
 
 .card {
-  padding-left: 60px;
+  
   background-color: #f9f9f9;
   border: none;
 
@@ -339,7 +337,8 @@ padding: revert;
 
 .card-img-top {
   object-fit: cover;
-  height: 200px;
+  
+  border-radius: 10px;
 }
 @media (max-width:450px) {
   .card-deck .card {
@@ -674,7 +673,8 @@ padding: revert;
   }
 
   .card .card-image {
-    height: 200px;
+    max-height: 250px;
+    width: 100%;
   }
 
   .card .card-content {
@@ -773,4 +773,97 @@ padding: revert;
 }
 .searchresult nav{
   display: block;
+}
+/*new camp*/
+.addcampform{
+  display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+}
+.addcampcontainer{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/*campground details*/
+/* CampgroundDetails.module.css */
+
+.container .row .col h1{
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.imageContainer {
+  margin-bottom: 20px;
+}
+
+.mapContainer {
+  width: 100%;
+  height: 400px;
+  margin-bottom: 20px;
+}
+.col-md-6 .mapboxgl-map{
+  border-radius: 10px;
+    border: solid grey 1px;
+}
+/*review popup*/
+/* ReviewPopup.css */
+.emoji-rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.emoji {
+  font-size: 2em;
+  margin-right: 10px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.emoji:last-child {
+  margin-right: 0;
+}
+
+.emoji:hover {
+  transform: scale(1.1);
+}
+
+.emoji.selected {
+  transform: scale(1.3);
+}
+
+/*review display*/
+/* ReviewDisplay.css */
+
+.review-display {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.review {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.emoji {
+  font-size: 2rem;
+}
+
+.comment {
+  flex-grow: 1;
+}
+
+.review-meta {
+  display: flex;
+  gap: 0.5rem;
+  font-size: 0.9rem;
+  color: #777;
+  margin-top: 0.5rem;
 }
