--- a/src/auth-css/login.css
+++ b/src/auth-css/login.css
@@ -430,7 +430,7 @@ ul {
   width: 100%; /* Make the search input take full width of the form container */
 }
 .search-container .searchresult nav{
-  padding: 1rem 1.5rem;
+  padding: 1.4rem 1.4rem;
   height: 10%;
 }
 .search-input::placeholder {
@@ -705,6 +705,7 @@ ul {
 }
 .p-4 {
   height: 15%;
+  padding: 2.2rem!important;
 }
 @media (max-width: 700px) {
   .search-container {
@@ -938,4 +939,7 @@ ul {
 }
 .stepgroup .card div{
   padding: 0;
+}
+.navbar .p-4{
+  padding: 2.2rem!important;
 }
