--- a/src/auth-css/login.css
+++ b/src/auth-css/login.css
@@ -707,7 +707,7 @@ ul {
   height: 15%;
   padding: 2.2rem!important;
 }
-@media (max-width: 800px) {
+@media (max-width: 600px) {
   .search-container {
     flex-direction: column;
     height: 100%;
@@ -769,6 +769,43 @@ ul {
   }
   .card-info-container{
     align-items: flex-end;
+  }
+
+}
+@media (max-width: 900px) {
+  .search-container {
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .searchresult {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 1rem;
+    height: 40%;
+    order: 3;
+  }
+
+  .map-container {
+    width: 100%;
+    height: 350px;
+    order: 2;
+    display: flex;
+    padding: 1.5rem;
+    
+  }
+
+  .mapboxgl-canvas{
+    border-radius: 10px;
+  }
+
+  .search-container nav {
+    padding: 0.5rem;
+    order: 1;
+    display: block!important;
+  }
+  .searchresult nav{
+    display: none!important;
   }
 
 }
